Overflow Issue - New Styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,233 +1,216 @@
-html {
-    background: linear-gradient(
-      to right bottom,
-      rgba(254, 185, 95, 0.212),
-      rgba(45, 200, 246)
-    );
-    overflow: hidden;
+.App {
+  min-height: 100vh;
+  background: linear-gradient(
+    to right bottom,
+    rgba(254, 185, 95, 0.212),
+    rgba(45, 200, 246)
+  );
+  overflow: hidden;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.title.maintext {
+  padding-top: 15%;
+  color: #2431ae;
+  margin: 10px;
+  font-size: 5rem;
+}
+
+.title.subtext {
+  color: #11a9cb;
+  margin-bottom: 20px;
+  margin-top: 0px;
+  font-size: 2.5rem;
+  font-style: thin;
+}
+
+.btn {
+  background-color: #2431ae;
+  border: solid white 1px;
+  color: white;
+  border-radius: 10px;
+  height: 50px;
+  width: 200px;
+  margin-top: 20px;
+  font-size: 1.5rem;
+  transition-duration: 10ms;
+  cursor: pointer;
+}
+
+.title.btn {
+  padding: 0;
+}
+
+.btn:active {
+  margin-top: 21px;
+}
+
+
+
+.sun-img {
+  scale: 90%;
+  position: absolute;
+  top: -10px;
+  left: -10px;
+}
+
+.sun-ray {
+  position: absolute;
+  top: -120px;
+  left: -120px;
+  border-radius: 50%;
+  background-color: white;
+  z-index: -1;
+}
+.r-one {
+  width: 300px;
+  height: 300px;
+  opacity: 0.5;
+  animation: ray2 5s infinite;
+}
+.r-two {
+  width: 325px;
+  height: 325px;
+  opacity: 0.5;
+  animation: ray3 5s infinite;
+}
+.r-three {
+  width: 310px;
+  height: 310px;
+  opacity: 0.5;
+  animation: ray4 5s infinite;
+}
+.r-four {
+  width: 350px;
+  height: 350px;
+  opacity: 0.5;
+  animation: ray5 5s infinite;
+}
+
+@keyframes ray2 {
+  0% {
+    transform: scale(1);
   }
-  
-  .title {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  50% {
+    transform: scale(1.3);
+    opacity: 0.1;
   }
-  
-  .title.maintext {
-    padding-top: 15%;
-    color: #2431ae;
-    margin: 10px;
-    font-size: 5rem;
+  100% {
+    transform: scale(1);
   }
-  
-  .title.subtext {
-    color: #11a9cb;
-    margin-bottom: 20px;
-    margin-top: 0px;
-    font-size: 2.5rem;
-    font-style: thin;
+}
+
+@keyframes ray3 {
+  0% {
+    transform: scale(1);
   }
-  
-  .btn {
-    background-color: #2431ae;
-    border: solid white 1px;
-    color: white;
-    border-radius: 10px;
-    height: 50px;
-    width: 200px;
-    margin-top: 20px;
-    font-size: 1.5rem;
-    transition-duration: 10ms;
-    cursor: pointer;
+  50% {
+    transform: scale(1.3);
+    opacity: 0.1;
   }
-  
-  .btn:active {
-    margin-top: 21px;
+  100% {
+    transform: scale(1);
   }
-  
-  .btn:after {
-    content: "";
-    display: block;
-    position: absolute;
-    z-index: -1;
-    border-radius: 10px;
-    height: 50px;
-    width: 200px;
-    opacity: 0;
-    transition: all 0.5s;
-    box-shadow: 0 0 5px 20px white;
+}
+
+@keyframes ray4 {
+  0% {
+    transform: scale(1);
   }
-  
-  .btn:active:after {
-    box-shadow: 0 0 0 0 white;
-    position: absolute;
-    border-radius: 10px;
-    left: 0;
-    top:0;
-    opacity: 1;
-    transition: 0s;
+  50% {
+    transform: scale(1.3);
+    opacity: 0.1;
   }
-  
-  .sun-img {
-    scale: 90%;
-    position: absolute;
-    top: -10px;
-    left: -10px;
+  100% {
+    transform: scale(1);
   }
-  
-  .sun-ray {
-    position: absolute;
-    top: -120px;
-    left: -120px;
-    border-radius: 50%;
-    background-color: white;
-    z-index: -1;
+}
+
+@keyframes ray5 {
+  0% {
+    transform: scale(1);
   }
-  .r-one {
-    width: 300px;
-    height: 300px;
-    opacity: 0.5;
-    animation: ray2 5s infinite;
+  50% {
+    transform: scale(1.3);
+    opacity: 0.1;
   }
-  .r-two {
-    width: 325px;
-    height: 325px;
-    opacity: 0.5;
-    animation: ray3 5s infinite;
+  100% {
+    transform: scale(1);
   }
-  .r-three {
-    width: 310px;
-    height: 310px;
-    opacity: 0.5;
-    animation: ray4 5s infinite;
+}
+
+.wave-1 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  animation: wave1 6s infinite;
+}
+
+.wave-2 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  animation: wave2 5s infinite;
+}
+
+.wave-3 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  animation: wave3 4s infinite;
+}
+
+@keyframes wave1 {
+  0% {
+    transform: scale(1);
+    transform: translateX(0);
   }
-  .r-four {
-    width: 350px;
-    height: 350px;
-    opacity: 0.5;
-    animation: ray5 5s infinite;
+  50% {
+    transform: scale(1.1);
+    transform: translateX(100);
   }
-  
-  @keyframes ray2 {
-    0% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.3);
-      opacity: 0.1;
-    }
-    100% {
-      transform: scale(1);
-    }
+  100% {
+    transform: scale(1);
+    transform: translateX(0);
   }
-  
-  @keyframes ray3 {
-    0% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.3);
-      opacity: 0.1;
-    }
-    100% {
-      transform: scale(1);
-    }
+}
+
+@keyframes wave2 {
+  0% {
+    transform: scale(1);
+    transform: translateX(0);
   }
-  
-  @keyframes ray4 {
-    0% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.3);
-      opacity: 0.1;
-    }
-    100% {
-      transform: scale(1);
-    }
+  50% {
+    transform: scale(1.1);
+    transform: translateX(-100);
   }
-  
-  @keyframes ray5 {
-    0% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.3);
-      opacity: 0.1;
-    }
-    100% {
-      transform: scale(1);
-    }
+  100% {
+    transform: scale(1);
+    transform: translateX(0);
   }
-  
-  .wave-1 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
-    animation: wave1 6s infinite;
+}
+
+@keyframes wave3 {
+  0% {
+    transform: scale(1);
+    transform: translateX(0);
   }
-  
-  .wave-2 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
-    animation: wave2 5s infinite;
+  50% {
+    transform: scale(1.1);
+    transform: translateX(100);
   }
-  
-  .wave-3 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
-    animation: wave3 4s infinite;
+  100% {
+    transform: scale(1);
+    transform: translateX(0);
   }
-  
-  @keyframes wave1 {
-    0% {
-      transform: scale(1);
-      transform: translateX(0);
-    }
-    50% {
-      transform: scale(1.1);
-      transform: translateX(100);
-    }
-    100% {
-      transform: scale(1);
-      transform: translateX(0);
-    }
-  }
-  
-  @keyframes wave2 {
-    0% {
-      transform: scale(1);
-      transform: translateX(0);
-    }
-    50% {
-      transform: scale(1.1);
-      transform: translateX(-100);
-    }
-    100% {
-      transform: scale(1);
-      transform: translateX(0);
-    }
-  }
-  
-  @keyframes wave3 {
-    0% {
-      transform: scale(1);
-      transform: translateX(0);
-    }
-    50% {
-      transform: scale(1.1);
-      transform: translateX(100);
-    }
-    100% {
-      transform: scale(1);
-      transform: translateX(0);
-    }
-  }
-  
+}
