--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,28 +1,24 @@
 .Main {
   display: flex;
-  justify-content: left;
+  align-items: baseline;
   text-align: left;
-  max-width: 500px;
+  max-width: 100vw;
   margin: 5px 35px 35px 35px;
   color: white;
   line-height: 25px;
 }
 
 .Footer {
-  position: absolute;
-  bottom: 0;
   width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-  margin-top: 50px;
-  padding: 10px 0 30px 0;
+  margin-top: 15vh;
+  padding: 10px 0 10px 0;
   background-color: #feb95f;
 }
 
 .wrapper {
-  display: inline-flex;
   list-style: none;
+  display: flex;
+  justify-content: space-around;
 }
 
 .wrapper .icon {
@@ -32,7 +28,7 @@
   border-radius: 10px;
   padding: 15px;
   margin: 10px;
-  width: 125px;
+  width: 20vw;
   height: 40px;
   font-size: 18px;
   display: flex;
@@ -50,7 +46,7 @@
   font-size: 14px;
   background: #ffffff;
   color: #ffffff;
-  padding: 5px 8px;
+  padding: 8px 45px;
   border-radius: 5px;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
   opacity: 0;
