--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,9 @@ body,
 html {
   margin: 0;
   padding: 0;
-  height: 100vh;
-  min-width: 100vw;
+  height: 100%;
+  min-width: 100%;
+  overflow: hidden;
 }
 
 #root {
